charts/kyverno-policies/tests/deny-external-secrets/kyverno-test-aws.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: deny-external-secrets-aws
policies:
  - ../policy.yaml
resources:
  - resources-aws.yaml
results:
  - kind: ExternalSecret
    policy: deny-external-secrets
    rule: aws-secrets-manager-paths
    resources:
      - good-global
    result: pass
  - kind: ExternalSecret
    policy: deny-external-secrets
    rule: aws-secrets-manager-paths
    resources:
      - good-ns-scoped
    result: pass
  - kind: ExternalSecret
    policy: deny-external-secrets
    rule: aws-secrets-manager-paths
    resources:
      - good-datafrom-extract
    result: pass
  - kind: ExternalSecret
    policy: deny-external-secrets
    rule: aws-secrets-manager-paths
    resources:
      - ignored-non-cluster-store
    result: pass
  - kind: ExternalSecret
    policy: deny-external-secrets
    rule: aws-secrets-manager-paths
    resources:
      - good-other-cluster-store
    result: pass
  - kind: ExternalSecret
    policy: deny-external-secrets
    rule: aws-secrets-manager-paths
    resources:
      - bad-missing-root-prefix
    result: fail
  - kind: ExternalSecret
    policy: deny-external-secrets
    rule: aws-secrets-manager-paths
    resources:
      - bad-cross-namespace-path
    result: fail
  - kind: ExternalSecret
    policy: deny-external-secrets
    rule: aws-secrets-manager-paths
    resources:
      - bad-cross-namespace-well-formed
    result: fail
  - kind: ExternalSecret
    policy: deny-external-secrets
    rule: aws-secrets-manager-paths
    resources:
      - bad-datafrom-cross-namespace
    result: fail
  - kind: ExternalSecret
    policy: deny-external-secrets
    rule: aws-secrets-manager-paths
    resources:
      - bad-namespace-prefix-collision
    result: fail
  - kind: ExternalSecret
    policy: deny-external-secrets
    rule: aws-secrets-manager-paths
    resources:
      - bad-cluster-prefix-collision
    result: fail
